--- a/package.json
+++ b/package.json
@@ -278,6 +278,7 @@
     "computed-types": "^1.11.2",
     "cross-env": "^7.0.3",
     "effect": "^3.4.7",
+    "fluentvalidation-ts": "^3.2.0",
     "fp-ts": "^2.16.7",
     "io-ts": "^2.2.21",
     "io-ts-types": "^0.5.19",
@@ -296,14 +297,13 @@
     "superstruct": "^1.0.4",
     "typanion": "^3.14.0",
     "typescript": "^5.5.3",
-    "valibot": "0.35.0",
+    "valibot": "^1.0.0-beta.0",
     "vest": "^5.3.0",
     "vite": "^5.3.3",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0",
     "yup": "^1.4.0",
-    "zod": "^3.23.8",
-    "fluentvalidation-ts": "^3.2.0"
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
     "react-hook-form": "^7.0.0"
