--- a/valibot/package.json
+++ b/valibot/package.json
@@ -13,6 +13,6 @@
   "peerDependencies": {
     "@hookform/resolvers": "^2.0.0",
     "react-hook-form": "^7.0.0",
-    "valibot": ">=0.33.0 <1"
+    "valibot": "^1.0.0"
   }
 }
