--- a/arktype/package.json
+++ b/arktype/package.json
@@ -13,6 +13,6 @@
   "peerDependencies": {
     "react-hook-form": "^7.0.0",
     "@hookform/resolvers": "^2.0.0",
-    "arktype": "2.0.0-dev.14"
+    "arktype": "^2.0.0"
   }
 }
