--- a/package.json
+++ b/package.json
@@ -256,53 +256,53 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@sinclair/typebox": "^0.32.34",
-    "@testing-library/dom": "^10.3.1",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20.14.9",
-    "@types/react": "^18.3.3",
-    "@typeschema/core": "^0.13.2",
-    "@typeschema/main": "^0.13.10",
-    "@typeschema/zod": "^0.13.3",
-    "@vinejs/vine": "^2.1.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "ajv": "^8.16.0",
+    "@sinclair/typebox": "^0.34.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
+    "@typeschema/core": "^0.14.0",
+    "@typeschema/main": "^0.14.1",
+    "@typeschema/zod": "^0.14.0",
+    "@vinejs/vine": "^3.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
-    "arktype": "2.0.0-dev.26",
+    "arktype": "2.0.4",
     "check-export-map": "^1.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "computed-types": "^1.11.2",
     "cross-env": "^7.0.3",
-    "effect": "^3.10.3",
+    "effect": "^3.12.7",
     "fluentvalidation-ts": "^3.2.0",
-    "fp-ts": "^2.16.7",
-    "io-ts": "^2.2.21",
+    "fp-ts": "^2.16.9",
+    "io-ts": "^2.2.22",
     "io-ts-types": "^0.5.19",
     "joi": "^17.13.3",
-    "jsdom": "^24.1.0",
-    "lefthook": "^1.6.18",
+    "jsdom": "^26.0.0",
+    "lefthook": "^1.10.10",
     "microbundle": "^0.15.1",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
     "nope-validator": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "reflect-metadata": "^0.2.2",
-    "superstruct": "^1.0.4",
+    "superstruct": "^2.0.2",
     "typanion": "^3.14.0",
-    "typescript": "^5.5.3",
-    "valibot": "^1.0.0-beta.0",
-    "vest": "^5.3.0",
-    "vite": "^5.3.3",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0",
-    "yup": "^1.4.0",
-    "zod": "^3.23.8"
+    "typescript": "^5.7.3",
+    "valibot": "1.0.0-beta.12",
+    "vest": "^5.4.6",
+    "vite": "^6.0.11",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.4",
+    "yup": "^1.6.1",
+    "zod": "^3.24.1"
   },
   "peerDependencies": {
     "react-hook-form": "^7.0.0"
