--- a/package.json
+++ b/package.json
@@ -318,5 +318,8 @@
   },
   "peerDependencies": {
     "react-hook-form": "^7.0.0"
+  },
+  "dependencies": {
+    "caniuse-lite": "^1.0.30001698"
   }
 }
