feat: automatically infer values from schema (#739)
* fix(zodResolver): infer from schema

* chore: update letfhook config

* fix(vineResolver): infer from schema

* fix(valibotResolver): infer from schema

* refactor(zod): remove arrow functions

* feat(typebox): automatically infer values from schema

* feat(typanion): automatically infer values from schema

* refactor: remove useless files

* feat(superstruct): automatically infer values from schema

* feat(io-ts): automatically infer values from schema

* refactor: remove arrow functions

* feat(effect): automatically infer values from schema

* feat(computed-types): automatically infer values from schema

* feat(class-validator): automatically infer values from schema

* feat(arktype): automatically infer values from schema

* feat(standard-schema): automatically infer values from schema

* doc: add resolver comparison

* doc: add jsdoc

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -18,6 +18,7 @@ pre-commit:
     lint:
       glob: '*.{js,ts,jsx,tsx}'
       run: bun lint {staged_files}
+      stage_fixed: true
     typescript:
       glob: '*.{ts,tsx}'
       run: bun tsc --noEmit
