--- a/typanion/package.json
+++ b/typanion/package.json
@@ -11,7 +11,7 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "peerDependencies": {
-    "react-hook-form": "^7.0.0",
+    "react-hook-form": "7.55.0-next.9",
     "@hookform/resolvers": "^2.0.0",
     "typanion": "^3.3.2"
   }
