--- a/.github/workflows/compressedSize.yml
+++ b/.github/workflows/compressedSize.yml
@@ -16,3 +16,4 @@ jobs:
       - uses: preactjs/compressed-size-action@v2
         with:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
+          install-script: "bun install --frozen-lockfile"
