--- a/nope/package.json
+++ b/nope/package.json
@@ -11,7 +11,7 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "peerDependencies": {
-    "react-hook-form": "7.55.0-next.9",
+    "react-hook-form": "7.55.0",
     "@hookform/resolvers": "^2.0.0",
     "nope-validator": "^0.12.0"
   }
