--- a/package.json
+++ b/package.json
@@ -303,7 +303,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "7.55.0-next.9",
+    "react-hook-form": "^7.55.0",
     "reflect-metadata": "^0.2.2",
     "superstruct": "^2.0.2",
     "typanion": "^3.14.0",
@@ -317,7 +317,7 @@
     "zod": "^3.24.2"
   },
   "peerDependencies": {
-    "react-hook-form": "7.55.0-next.9"
+    "react-hook-form": "7.55.0"
   },
   "dependencies": {
     "@standard-schema/utils": "^0.3.0"
