--- a/ajv/package.json
+++ b/ajv/package.json
@@ -11,7 +11,7 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "peerDependencies": {
-    "react-hook-form": "^7.0.0",
+    "react-hook-form": "7.55.0",
     "@hookform/resolvers": "^2.0.0",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0"
