--- a/valibot/package.json
+++ b/valibot/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "peerDependencies": {
     "@hookform/resolvers": "^2.0.0",
-    "react-hook-form": "^7.0.0",
+    "react-hook-form": "7.55.0",
     "valibot": "^1.0.0 || ^1.0.0-beta.4 || ^1.0.0-rc"
   }
 }
