--- a/package.json
+++ b/package.json
@@ -317,7 +317,7 @@
     "zod": "^3.24.2"
   },
   "peerDependencies": {
-    "react-hook-form": "7.55.0"
+    "react-hook-form": "^7.55.0"
   },
   "dependencies": {
     "@standard-schema/utils": "^0.3.0"
