--- a/package.json
+++ b/package.json
@@ -314,7 +314,7 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9",
     "yup": "^1.6.1",
-    "zod": "^3.24.2"
+    "zod": "3.24.4"
   },
   "peerDependencies": {
     "react-hook-form": "^7.55.0"
