--- a/package.json
+++ b/package.json
@@ -314,13 +314,13 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9",
     "yup": "^1.6.1",
-    "zod": "3.24.4"
+    "zod": "3.24.4",
+    "zod-v4": "npm:zod@^3.25.0"
   },
   "peerDependencies": {
     "react-hook-form": "^7.55.0"
   },
   "dependencies": {
-    "@standard-schema/utils": "^0.3.0",
-    "zod-v4": "npm:zod@^3.25.0"
+    "@standard-schema/utils": "^0.3.0"
   }
 }
