--- a/package.json
+++ b/package.json
@@ -282,6 +282,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
     "arktype": "2.0.4",
     "check-export-map": "^1.3.1",
     "class-transformer": "^0.5.1",
